[project]
name = "config"
version = "0.0.0"
authors = ["wtftw"]

[dependencies.wtftw_contrib]
                                     git = "https://github.com/Kintaro/wtftw-contrib.git"

                                     [dependencies.wtftw]
git = "https://github.com/Kintaro/wtftw.git"

[lib]
name = "config"
crate-type = ["dylib"]